Changelog
=========

1.0b2 (unreleased)
------------------

* Both ``zeam.form`` and ``zope.schema`` Fields are useable in a Form,
  now. The changes have been made in the inline validation, to take
  care of both types.

* ...


1.0b1 (2010-06-25)
------------------

* The package now uses the latest version of ``zeam.form.base``, that
  separates the `extractData` from the `validateData`. It allows to
  validate invariants in a cleaner way, without overriding generic
  code.

* The DeprecationWarning in invariants validation is gone. It now uses
  the representation of the exception and no longer the `message`
  attribute.

* The package now exposes the base ``zeam.form`` markers.


1.0a2 (2010-06-25)
------------------

* `ApplicationForm` now validates interfaces invariants.

* `ApplicationForm` is now localized, since it provides a contextual
  i18nLanguage attribute.

* Added tests


1.0a1 (2010-06-02)
------------------

* Added a base Form model : `ApplicationForm`

* ``dolmen.forms.base`` no longer uses ``z3c.form`` but is now based
  on the ``zeam.form`` Form framework

* Added several helpers functions, to extract changes Attributes and
  notify events

* Added tests


0.1 (2009-10-25)
----------------

* Initial release